ncc/testsuite/positive/tuples.n
class A {
  public this () {}

  public Y : int * int
  {
    mutable x : int;
    mutable y : int;
    get { (x, y) }
    set { def (a, b) = value; x = a + 1; y = b + 1; }
  }
}

module M {

  public Main () : void {
    def x = (2, "aa");
    def y = (2, "aa");
    def z = (1, "aa");
    def w = (2, "ab");
    when (x.Equals (y)) Nemerle.IO.printf ("1\n");
    when (x.Equals (z)) Nemerle.IO.printf ("2\n");
    when (x.Equals (w)) Nemerle.IO.printf ("3\n");
    when (y.Equals (z)) Nemerle.IO.printf ("4\n");
    when (y.Equals (w)) Nemerle.IO.printf ("5\n");
    when (z.Equals (w)) Nemerle.IO.printf ("6\n");
    Nemerle.IO.printf ("%s %s %s %s\n", x.ToString (), y.ToString (), z.ToString (), w.ToString ());
    
    def a = A();
    Nemerle.IO.printf ("%s\n", a.Y.ToString ());
    a.Y = (41, 41);
    Nemerle.IO.printf ("%s\n", a.Y.ToString ());
  }
}

/*
BEGIN-OUTPUT
1
(2, aa) (2, aa) (1, aa) (2, ab)
(0, 0)
(42, 42)
END-OUTPUT
*/

