ncc/testsuite/negative/properties4.n
public class A
{
	public Prop : int
	{
		get { 0 }
		protected set { _ = value; }
	}

	public Test1() : void
	{
		def x = A();
		x.Prop = 0;
	}
}

public class C : B { }

public class B : A
{
	public Test2() : void
	{
    def f()
    {
		  def x = A();
		  x.Prop = 0; //E: Cannot access protected member 'A\.Prop' via a qualifier of type 'A'; the qualifier must be of type 'B' \(or derived from it\)
		  Prop = 0;
		  def y = B();
		  y.Prop = 0;
		  def z = C();
		  z.Prop = 0;
    }

    def x = f;
    x();
    x();

	  def x = A();
	  x.Prop = 0; //E: Cannot access protected member
	  Prop = 0;
	  def y = B();
	  y.Prop = 0;
	  def z = C();
	  z.Prop = 0;
  }
}

module Program
{
  Main() : void { }
}